[project]
name = "calamanine-tablib"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]


[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"


[tool.maturin]
module-name = "calamine_tablib._calamine_tablib"
python-source = "python"
features = ["pyo3/extension-module"]
